working logger for each thread

--- a/test-output/old/Remote Suite/HappyFlowChromeTest.properties
+++ b/test-output/old/Remote Suite/HappyFlowChromeTest.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=HappyFlowFirefoxTest][SuiteResult context=testim][SuiteResult context=HappyFlowChromeTest]
+[SuiteResult context=HappyFlowFirefoxTest][SuiteResult context=HappyFlowChromeTest][SuiteResult context=testim]
