--- a/test-output/old/Remote Suite/HappyFlowFirefoxTest.properties
+++ b/test-output/old/Remote Suite/HappyFlowFirefoxTest.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=HappyFlowFirefoxTest][SuiteResult context=testim][SuiteResult context=HappyFlowChromeTest]
+[SuiteResult context=HappyFlowFirefoxTest][SuiteResult context=HappyFlowChromeTest][SuiteResult context=testim]
